# SSL_VAN

./: .gitignore  README.md  cluster_paths.json  pyproject.toml  requirements.txt  slurm-30020.out  slurm-30768.out  slurm-30776.out  slurm-30777.out  slurm-30779.out  slurm-30780.out  slurm-31764.out  slurm-31774.out  slurm-31799.out  slurm-31836.out  slurm-33011.out  slurm-33013.out  slurm-33017.out  slurm-33018.out  slurm-33019.out  slurm-33216.out  slurm-33217.out  slurm-33322.out  slurm-33325.out  slurm-33356.out  slurm-33424.out  slurm-33425.out  slurm-33426.out  slurm-33427.out  slurm-33428.out  slurm-33429.out  slurm-33430.out  slurm-33431.out  slurm-33432.out  slurm-33433.out  slurm-33434.out  slurm-33435.out  slurm-33436.out  slurm-33437.out  slurm-33438.out  (+4239 more)
BRATS21/: check_loader.py  eval.py  main.py  old_main.py  temp.py  tester.py  trainer.py
BTCV/: eval.py  main.py  main_new.py  old_main.py  plotter.py  plotter_1.py  plotter_2.py  tester.py  trainer.py  trainer_new.py
MSD/: check_loader.py  eval.py  main.py  plotter_2.py  tester.py  trainer.py
clustering/: cluster_paths.json  data_utils.py  kmeans_learning.py  main_van.py  training_van.py
commons/: model_factory.py  optimizer.py  pre_trained_loader.py  util.py
computational_complexity/: FLOPS.py
data_cleaner/: LUNA16.ipynb  segmentation_luna.py
figures/: New_Medical_Image - model.drawio  New_Medical_Image - ulkanet.drawio
input_list/: dataset_BTCV_List.json  dataset_HNSCC_List.json  dataset_LIDC_List.json  dataset_LUNA16_List.json  dataset_MSD_List.json  dataset_MSD_List_old.json  (+3 more)
(+388 files in other folders)
